--- a/client/src/styles/Dashboard.scss
+++ b/client/src/styles/Dashboard.scss
@@ -1,35 +1,82 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,900;1,300;1,400&family=Playfair+Display:ital,wght@0,400;0,500;0,700;0,900;1,800;1,900&display=swap');
+
 ul {
   list-style: none;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 2em 0;
-  flex-wrap: wrap;
-  width: 95%;
+  padding: 0 2em;
   margin: 0 auto;
 
   li {
-    width: 20em;
-    border-radius: 24px;
-    display: inline-block;
+    width: 40em;
+    border-radius: 64px;
+    //display: inline-block;
     margin: 0.5em;
-    background-color: #8ec5fc;
+    //background-color: #8ec5fc;
     background-image: linear-gradient(
       62deg,
-      #8ec5fc 0%,
-      #e0c3fc 50%,
-      #ffffff 100%
+      rgba(142, 197, 252, 0.6) 0%,
+      rgba(224, 195, 252, 0.6) 50%,
+      rgba(255, 255, 255, 0.6) 100%
     );
 
     a {
-      display: block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       width: inherit;
-      padding: 10em 0;
+      padding: 140px;
+      text-align: center;
+      color: #2c2727;
+      font-size: 1.3em;
     }
   }
 
   li:hover {
     transform: scale(1.05);
     transition: ease-in-out 0.1s;
+    box-shadow: 0 0 0.5em #2c272734;
+    a {
+      font-weight: bold;
+    }
   }
+}
+
+#div-dashboard {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 4em;
+
+  div {
+    overflow-y: auto;
+    width: 50%;
+    border-left: 1px solid #586ab079;
+  }
+}
+
+#scn-dashboard-img {
+  background-image: url('./../images/lift-up.jpg');
+  background-size: cover;
+  width: 70%;
+  position: absolute;
+  z-index: -1;
+  left: -10em;
+  top: 15em;
+  height: 40em;
+}
+
+#div-dashboard-text {
+  width: 35%;
+  margin-left: auto;
+  margin-top: 3em;
+  margin-right: 10%;
+  line-height: 2;
+  font-size: 1.1em;
+  text-align: right;
 }
