--- a/client/src/styles/Dashboard.scss
+++ b/client/src/styles/Dashboard.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,900;1,300;1,400&family=Playfair+Display:ital,wght@0,400;0,500;0,700;0,900;1,800;1,900&display=swap');
 
-ul {
+ul:not(#ul-myHabits) {
   list-style: none;
   width: 100%;
   display: flex;
