--- a/client/src/styles/Profile.scss
+++ b/client/src/styles/Profile.scss
@@ -22,17 +22,71 @@
     transition: ease-in-out 0.1s;
     border-radius: 10px;
   }
+  .button1 {
+    border-radius: 1em;
+    background-color: #b3aaff;
+    padding: 0.5em;
+    border: white;
+    transition: all 0.5s;
+    cursor: pointer;
+    padding: 0.75em;
+    margin: 2em;
+
+    text-decoration: none;
+    color: #2c2727;
+    width: 8em;
+    transition: ease-in-out 0.1s;
+    border-radius: 10px;
+  }
   input:hover {
-    background-color: #e7ebff;
+    background-color: #d0cbff;
   }
   .button:hover {
     transform: scale(1.1);
     transition: ease-in-out 0.1s;
-    background: #a6b7ff;
+    background: #b1bfff;
     border: solid inherit #d7deff;
+    box-shadow: 8px 8px 8px #e0dcdc;
+  }
+  .button1:hover {
+    transform: scale(1.1);
+    transition: ease-in-out 0.1s;
+    background: #bfb9fa;
+    border: solid inherit #d7deff;
+    box-shadow: 8px 8px 8px #e0dcdc;
   }
   img:hover {
     transform: scale(1.05);
     transition: ease-in-out 0.1s;
+    box-shadow: 10px 10px 20px #e0dcdc;
   }
+}
+.close {
+  border: none;
+  padding: 0%;
+  margin: 0%;
+  display: flex;
+  justify-content: flex-end;
+  background-color: inherit;
+  width: 1.5em;
+}
+.popup {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: none;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.popup_inner {
+  position: absolute;
+  left: 10%;
+  right: 10%;
+  top: 10%;
+  bottom: 30%;
+  margin: none;
+  background: #eaeffd;
 }
